Started Ingredient flow
Created controller, service, model, repository and initial test suite. However, first test passes, but bootRun exits with failure.
