# src/main/java/com/recipeagent/recipe_agent_api/controller/HomeController.java
@@ -1,0 +1,24 @@
+package com.recipeagent.recipe_agent_api.controller;
+
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatusCode;
+import org.springframework.http.MediaType;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+@RestController
+@RequestMapping("/")
+public class HomeController {
+
+    @GetMapping
+    public ResponseEntity<String> getHome() {
+        HttpHeaders header = new HttpHeaders();
+        header.setContentType(MediaType.TEXT_PLAIN);
+
+        return new ResponseEntity<String>("Welcome to the Recipe Agent backend API!", header,
+                HttpStatusCode.valueOf(200));
+    }
+
+}
